# twinwidth-2023

./: .gitignore  .tarignore  Makefile  README.md
src/main/cpp/: CMakeLists.txt  exact-solver.cpp  modular-bench.cpp
src/main/cpp/algorithms/: ExactSolver.hpp  PrimeSolver.hpp
src/main/cpp/algorithms/base/: SolverInfo.hpp  TimeManager.hpp
src/main/cpp/algorithms/deprecated/: BaseSolver.hpp
src/main/cpp/algorithms/exact/: BranchSolver.cpp  BranchSolver.hpp  DirectSolver.hpp  PrimeTreeSolver.hpp  Reducer.hpp
src/main/cpp/algorithms/lowerbound/: LBCore.hpp  LBGreedy.hpp  LBManager.hpp  LBSample.cpp  LBSample.hpp  LBSeparate.hpp
src/main/cpp/algorithms/preprocess/: VertexSeparator.cpp  VertexSeparator.hpp
src/main/cpp/algorithms/upperbound/: GreedySolver.cpp  GreedySolver.hpp  LocalSearch.cpp  LocalSearch.hpp  LocalSearchPlus.cpp  LocalSearchPlus.hpp  UBSeparate.hpp  WeakRedPotential.hpp
src/main/cpp/ds/cache/: SimpleCache.hpp
src/main/cpp/ds/graph/: ContractionHistory.hpp  ContractionInfo.hpp  Graph.cpp  Graph.hpp  TimelineEncoding.hpp  TimelineEncodingPlus.hpp  TriGraph.cpp  TriGraph.hpp
src/main/cpp/ds/queue/: AdaptivePriorityQueue.hpp  BucketQueue.hpp
src/main/cpp/ds/set/: ArrayBitset.hpp  FastSet.cpp  (+4 more)
src/main/cpp/generators/: named.cpp  named.hpp  random.cpp  random.hpp  tree.cpp  tree.hpp
src/main/cpp/modular/: MDTree.hpp
src/main/cpp/readwrite/: pace_2023.cpp  pace_2023.hpp
src/main/cpp/sat/: SATSolver.cpp  SATSolver.hpp
src/main/cpp/util/: Permutation.hpp  Random.hpp  hash_table.cpp  hash_table.hpp  logger.cpp  logger.hpp  util.hpp
(+41 files in other folders)
